Fixed some fields showing up in the mapping which shouldn't be there. Minor CSS fixes. Added EnemyVisualControls to the admin map. Updated changelog once more.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -91,7 +91,7 @@
 }
 
 /* Remove square background and border around enemies, but leave editing drag squares alone */
-.leaflet-marker-icon.leaflet-div-icon:not(.leaflet-editing-icon) {
+.leaflet-marker-icon.leaflet-div-icon:not(.leaflet-editing-icon):not(.leaflet-edit-marker-selected) {
     border: none;
     background-color: unset;
 }
