#40 Initial setup for a full-screen map on the edit page. Rough, will need cleaning up and refactoring but it works for now.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -57,11 +57,15 @@
 }
 
 /** LEAFLET */
-#map {
-    height: 90vh; /* 90% of viewport height */
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+html, body, #map, #app {
+    height: 100%;
+    width: 100%;
 }
 
 #map-controls {
