#40 Fixed sidebar & scrollbar issues

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,3 +30,5 @@
 @import "~intro.js/themes/introjs-dark.css";
 // Password strength meter
 @import "~password-strength-meter/dist/password.min.css";
+// Malihu custom scrollbar plugin
+@import "~malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css";
