#40 Reworked try to be a modal popup rather than a full page (unless you go to /try manually). Moved some elements from /try into the sidebar, removed warning/global messages when in custom layout mode.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -112,6 +112,10 @@ html, body, #map, #app, .wrapper {
     color: #DF691A;
 }
 
+#sidebar .card {
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
 #edit_route_draw_container a {
     color: #FFF;
 }
