--- a/resources/assets/css/affixes.css
+++ b/resources/assets/css/affixes.css
@@ -10,18 +10,18 @@
 .affix_icon_sanguine, .affix_icon_skittish, .affix_icon_teeming, .affix_icon_tyrannical, .affix_icon_volcanic
 { max-width: 100%; background-size: 100%; background-image: url('/images/affixes/affixes.png'); }
 
-.affix_icon_bolstering { background-position: 0 0%; background-size: 100%; }
-.affix_icon_bursting { background-position: 0 7.142857%; background-size: 100%; }
-.affix_icon_explosive { background-position: 0 14.285714%; background-size: 100%; }
-.affix_icon_fortified { background-position: 0 21.428571%; background-size: 100%; }
-.affix_icon_grievous { background-position: 0 28.571429%; background-size: 100%; }
-.affix_icon_infested { background-position: 0 35.714286%; background-size: 100%; }
-.affix_icon_necrotic { background-position: 0 42.857143%; background-size: 100%; }
-.affix_icon_quaking { background-position: 0 50%; background-size: 100%; }
-.affix_icon_raging { background-position: 0 57.142857%; background-size: 100%; }
-.affix_icon_relentless { background-position: 0 64.285714%; background-size: 100%; }
-.affix_icon_sanguine { background-position: 0 71.428571%; background-size: 100%; }
-.affix_icon_skittish { background-position: 0 78.571429%; background-size: 100%; }
-.affix_icon_teeming { background-position: 0 85.714286%; background-size: 100%; }
-.affix_icon_tyrannical { background-position: 0 92.857143%; background-size: 100%; }
-.affix_icon_volcanic { background-position: 0 100%; background-size: 100%; }
+.affix_icon_bolstering { background-position: 0 0%; }
+.affix_icon_bursting { background-position: 0 7.142857%; }
+.affix_icon_explosive { background-position: 0 14.285714%; }
+.affix_icon_fortified { background-position: 0 21.428571%; }
+.affix_icon_grievous { background-position: 0 28.571429%; }
+.affix_icon_infested { background-position: 0 35.714286%; }
+.affix_icon_necrotic { background-position: 0 42.857143%; }
+.affix_icon_quaking { background-position: 0 50%; }
+.affix_icon_raging { background-position: 0 57.142857%; }
+.affix_icon_relentless { background-position: 0 64.285714%; }
+.affix_icon_sanguine { background-position: 0 71.428571%; }
+.affix_icon_skittish { background-position: 0 78.571429%; }
+.affix_icon_teeming { background-position: 0 85.714286%; }
+.affix_icon_tyrannical { background-position: 0 92.857143%; }
+.affix_icon_volcanic { background-position: 0 100%; }
