#84 Cleaned up the dungeonroute table class; added some handlebars to handle some stray html. Added another one for the owl carousel to allow users to cycle through images.
Thumbnails are now updated in form of published = 1 first, this will speed up the loading of images for published routes, especially important in the beginning when no thumbnails are yet generated.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,7 +22,7 @@
 // Bar rating
 @import "~jquery-bar-rating/dist/themes/bars-1to10.css";
 // Owl Carousel
-// @import "~owl.carousel/dist/assets/owl.carousel.min.css";
+@import "~owl.carousel/dist/assets/owl.carousel.min.css";
 // Intro.js
 @import "~intro.js/minified/introjs.min.css";
 @import "~intro.js/themes/introjs-dark.css";
