--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -19,6 +19,66 @@
 }
 
 /** BOOTSTRAP **/
+@media (max-width: 576px) and (orientation: landscape) {
+    .hide-on-landscape {
+        display: none;
+    }
+}
+
+@media (max-width: 576px) and (orientation: portrait) {
+    .hide-on-portrait {
+        display: none;
+    }
+}
+
+@media (min-width: 576px) and (orientation: landscape) {
+    .hide-on-landscape-sm {
+        display: none;
+    }
+}
+
+@media (min-width: 576px) and (orientation: portrait) {
+    .hide-on-portrait-sm {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (orientation: landscape) {
+    .hide-on-landscape-md {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (orientation: portrait) {
+    .hide-on-portrait-md {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) and (orientation: landscape) {
+    .hide-on-landscape-lg {
+        display: none;
+    }
+}
+
+@media (min-width: 992px) and (orientation: portrait) {
+    .hide-on-portrait-lg {
+        display: none;
+    }
+}
+
+@media (min-width: 1200px) and (orientation: landscape) {
+    .hide-on-landscape-xl {
+        display: none;
+    }
+}
+
+@media (min-width: 1200px) and (orientation: portrait) {
+    .hide-on-portrait-xl {
+        display: none;
+    }
+}
+
 .left_checkbox {
     width: 40px;
 }
@@ -124,6 +184,74 @@
 @media (max-width: 600px) {
     .routes_table .limit_width {
         max-width: 200px;
+    }
+}
+
+/** OWL.CAROUSEL */
+.routes_table .owl-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 192px;
+    height: 128px;
+}
+
+.routes_table .owl-carousel .owl-nav button {
+    width: 48px;
+    height: 128px;
+    font-size: 2em;
+    opacity: 0;
+}
+
+.routes_table .owl-carousel .owl-nav button:focus {
+    outline: none;
+}
+
+.routes_table .owl-carousel .owl-nav button:hover {
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+}
+
+.routes_table .owl-carousel .owl-nav button.owl-prev {
+    margin-right: 48px;
+    text-align: left;
+    padding-left: 15px !important;
+}
+
+.routes_table .owl-carousel .owl-nav button.owl-next {
+    margin-left: 48px;
+    text-align: right;
+    padding-right: 15px !important;
+}
+
+.routes_table .owl-carousel {
+    width: 192px;
+    height: 128px;
+}
+
+@media ( max-width: 600px) {
+    .routes_table .owl-carousel {
+        width: 96px;
+        height: 64px;
+    }
+
+    .routes_table .owl-carousel .owl-nav button {
+        width: 48px;
+        height: 64px;
+        font-size: 1em;
+        opacity: 0;
+    }
+
+    .routes_table .owl-carousel .owl-nav button.owl-prev {
+        margin-right: 0;
+        text-align: left;
+        padding-left: 7px !important;
+    }
+
+    .routes_table .owl-carousel .owl-nav button.owl-next {
+        margin-left: 0;
+        text-align: right;
+        padding-right: 7px !important;
     }
 }
 
