#95 Enemies can now be mapped to their MDT counterparts. The actual act of mapping the enemies however, still need to be done. But the system to do that easily is there now. Requires some testing but the coding should be done save for bug fixes.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -239,6 +239,10 @@ html, body, #map, #app, .wrapper {
     height: 11px;
 }
 
+.mdt_enemy_icon.leaflet-edit-marker-selected {
+    border-color: yellow !important;
+}
+
 .boss_enemy_icon {
     width: 32px;
     height: 32px;
