#95 Fixed a bunch of issues in the JS implementation of connecting MDT enemies to our own enemies that I found after using the system. Should be flawless now. I did Atal'Dazar with it completely and it worked fine.
Started working on the importer, added a Conversion class which contains well, the conversion work so that everything is one place and easily accessible. Now working on importing the enemies properly now that we have a dungeon connected.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -241,6 +241,8 @@ html, body, #map, #app, .wrapper {
 
 .mdt_enemy_icon.leaflet-edit-marker-selected {
     border-color: yellow !important;
+    margin-top: -9px !important;
+    margin-left: -9px !important;
 }
 
 .boss_enemy_icon {
