#95 Added colors to MDT coupling so that I can more easily identify incorrectly coupled MDT enemies (teeming, factions). Added faction selection in admin to Siege of Boralus. Enemy visualization now uses a color definition rather than multiple images that have baked-in color. Fixed a whole host of JS issues related to MDT enemies/visualization. Fixed faction returning in MDTDungeon for Siege of Boralus; factions were switched around.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -228,13 +228,8 @@ html, body, #map, #app, .wrapper {
 /** leaflet-marker-icon leaflet-div-icon leaflet-zoom-animated leaflet-interactive */
 /** leaflet-marker-icon leaflet-div-icon leaflet-editing-icon leaflet-touch-icon leaflet-zoom-animated leaflet-interactive leaflet-marker-draggable */
 
-.aggressive_enemy_icon,
-.neutral_enemy_icon,
-.unfriendly_enemy_icon,
-.friendly_enemy_icon,
-.unset_enemy_icon,
-.flagged_enemy_icon,
-.mdt_enemy_icon {
+.selected_enemy_icon,
+.enemy_icon {
     width: 11px;
     height: 11px;
 }
@@ -243,6 +238,7 @@ html, body, #map, #app, .wrapper {
     border-color: yellow !important;
     margin-top: -9px !important;
     margin-left: -9px !important;
+    border-radius: 4px !important; /* Fixes weird border */
 }
 
 .boss_enemy_icon {
@@ -329,20 +325,28 @@ html, body, #map, #app, .wrapper {
     max-width: 29.1%;
 }
 
+.enemy_icon {
+    background-image: url("/images/mapicon/unset.png") !important; /* no-repeat center !important; */
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 6px;
+    background-blend-mode: hard-light;
+}
+
 .aggressive_enemy_icon {
-    background: url("/images/mapicon/aggressive.png") no-repeat center !important;
+    background-color: #dc3c3c !important;
 }
 
 .neutral_enemy_icon {
-    background: url("/images/mapicon/neutral.png") no-repeat center !important;
+    background-color: #cccc2d !important;
 }
 
 .unfriendly_enemy_icon {
-    background: url("/images/mapicon/unfriendly.png") no-repeat center !important;
+    background-color: #ff9900 !important;
 }
 
 .friendly_enemy_icon {
-    background: url("/images/mapicon/friendly.png") no-repeat center !important;
+    background-color: #15c415 !important;
 }
 
 .boss_enemy_icon {
@@ -350,15 +354,23 @@ html, body, #map, #app, .wrapper {
 }
 
 .unset_enemy_icon {
-    background: url("/images/mapicon/unset.png") no-repeat center !important;
+
 }
 
 .flagged_enemy_icon {
-    background: url("/images/mapicon/neutral.png") no-repeat center !important;
+    background-color: #cccc2d !important;
 }
 
 .mdt_enemy_icon {
-    background: url("/images/mapicon/mdt.png") no-repeat center !important;
+    background-color: #4444ff !important;
+}
+
+.mdt_mismatched_enemy_icon {
+    background-color: #ff9900 !important;
+}
+
+.mdt_ok_enemy_icon {
+    background-color: #15c415 !important;
 }
 
 .door_icon {
@@ -371,19 +383,21 @@ html, body, #map, #app, .wrapper {
     border-color: yellow !important;
 }
 
-.killzone_enemy_icon_small {
+.selected_enemy_icon_small {
     margin-top: -4px !important;
     margin-left: -4px !important;
 }
 
-.killzone_enemy_icon_medium {
+.selected_enemy_icon_medium {
     margin-top: -4px !important;
     margin-left: -4px !important;
 }
 
-.killzone_enemy_icon_big {
+.selected_enemy_icon_big {
     margin-top: -4px !important;
     margin-left: -4px !important;
+    width: 32px !important;
+    height: 32px !important;
 }
 
 #map_enemy_forces h5 {
