#95 Teeming enemies are now marked with a circular border. Thought that would add something. Fixed adding enemy packs attempting to attach MDT enemies to it. Fixed faction display controls hiding any enemies marked as 'any'. Updated changelog with more entries and mapping with fixes.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -333,6 +333,10 @@ html, body, #map, #app, .wrapper {
     background-blend-mode: hard-light;
 }
 
+.teeming {
+    border: 1px solid red;
+}
+
 .aggressive_enemy_icon {
     background-color: #dc3c3c !important;
 }
