#108 Added support for Reaping, added migrations, fixed some existing migrations (running --force only lead to a  The "1" argument does not exist. because of lacking key => value). Fixed some minor issues.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -139,6 +139,7 @@ html, body, #map, #app, .wrapper {
     background-color: #4E5D6C;
 }
 
+#edit_route_freedraw_options_color,
 #sidebar .dropdown.bootstrap-select .btn {
     background-color: #4E5D6C;
     color: #FFF;
