--- a/resources/assets/css/affixes.css
+++ b/resources/assets/css/affixes.css
@@ -7,21 +7,23 @@
 
 .affix_icon_bolstering, .affix_icon_bursting, .affix_icon_explosive, .affix_icon_fortified, .affix_icon_grievous,
 .affix_icon_infested, .affix_icon_necrotic, .affix_icon_quaking, .affix_icon_raging, .affix_icon_relentless,
-.affix_icon_sanguine, .affix_icon_skittish, .affix_icon_teeming, .affix_icon_tyrannical, .affix_icon_volcanic
+.affix_icon_sanguine, .affix_icon_skittish, .affix_icon_teeming, .affix_icon_tyrannical, .affix_icon_volcanic,
+.affix_icon_reaping
 { max-width: 100%; background-size: 100%; background-image: url('/images/affixes/affixes.png'); }
 
-.affix_icon_bolstering { background-position: 0 0%; }
-.affix_icon_bursting { background-position: 0 7.142857%; }
-.affix_icon_explosive { background-position: 0 14.285714%; }
-.affix_icon_fortified { background-position: 0 21.428571%; }
-.affix_icon_grievous { background-position: 0 28.571429%; }
-.affix_icon_infested { background-position: 0 35.714286%; }
-.affix_icon_necrotic { background-position: 0 42.857143%; }
-.affix_icon_quaking { background-position: 0 50%; }
-.affix_icon_raging { background-position: 0 57.142857%; }
-.affix_icon_relentless { background-position: 0 64.285714%; }
-.affix_icon_sanguine { background-position: 0 71.428571%; }
-.affix_icon_skittish { background-position: 0 78.571429%; }
-.affix_icon_teeming { background-position: 0 85.714286%; }
-.affix_icon_tyrannical { background-position: 0 92.857143%; }
-.affix_icon_volcanic { background-position: 0 100%; }
+.affix_icon_bolstering { background-position: 0 0; }
+.affix_icon_bursting { background-position: 0 6.66%; }
+.affix_icon_explosive { background-position: 0 13.33%; }
+.affix_icon_fortified { background-position: 0 20%; }
+.affix_icon_grievous { background-position: 0 26.66%; }
+.affix_icon_infested { background-position: 0 33.33%; }
+.affix_icon_necrotic { background-position: 0 40%; }
+.affix_icon_quaking { background-position: 0 46.66%; }
+.affix_icon_raging { background-position: 0 53.33%; }
+.affix_icon_relentless { background-position: 0 60%; }
+.affix_icon_sanguine { background-position: 0 66.66%; }
+.affix_icon_skittish { background-position: 0 73.33%; }
+.affix_icon_teeming { background-position: 0 80%; }
+.affix_icon_tyrannical { background-position: 0 86.66%; }
+.affix_icon_volcanic { background-position: 0 93.33%; }
+.affix_icon_reaping { background-position: 0 100%; }
