#110 A couple of high-usage handlebars have been precompiled now, this saves a LOT of JS loading time. The page is visibly faster now which is great.
Not all templates have been converted, there's a bunch of PHP in some templates which are hardly used. For now I don't think it's wise to convert those purely for the sake of converting, the performance gains from those will be minimal. A lot of other small non-PHP templates have been converted.

--- a/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
@@ -15,6 +15,7 @@
         <div class="col-5 no-gutters">{{ teeming_label }}</div>
         <div class="col-7 no-gutters">{{ teeming }}</div>
     </div>
+    {{#if is_user_admin}}
     <div class="row">
         <div class="col-12 font-weight-bold">{{ admin_only_label }}</div>
     </div>
@@ -50,4 +51,5 @@
         <div class="col-5 no-gutters">{{ visual_label }}</div>
         <div class="col-7 no-gutters">{{ visual }}</div>
     </div>
+    {{/if}}
 </div>
