#85 Fixed admin side not working. Bit of a patch solution for now for some things.

--- a/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         <div class="col-5 no-gutters">{{ enemy_forces_label }}</div>
-        <div class="col-7 no-gutters">{{ enemy_forces }}</div>
+        <div class="col-7 no-gutters">{{{ enemy_forces }}}</div>
     </div>
     <div class="row">
         <div class="col-5 no-gutters">{{ base_health_label }}</div>
