--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -134,6 +134,7 @@ html, body, #map, #app, .wrapper {
     margin: auto;
     padding-bottom: 10px;
 }
+
 @media screen and (min-width: 1000px) {
     .route_manipulation_tools {
         width: 1000px;
@@ -159,6 +160,14 @@ html, body, #map, #app, .wrapper {
 .route_manipulation_tools .draw_element button,
 .route_manipulation_tools .draw_element input {
     height: 100%;
+}
+
+.route_manipulation_tools .draw_icon.leaflet-disabled,
+.route_manipulation_tools .draw_icon.leaflet-disabled:hover {
+    background: gray;
+    color: inherit;
+    text-decoration: unset;
+    cursor: default;
 }
 
 .route_manipulation_tools .draw_icon.leaflet-draw-toolbar-button-enabled,
@@ -190,7 +199,7 @@ html, body, #map, #app, .wrapper {
 }
 
 #edit_route_draw_container .leaflet-draw-actions {
-    background-color: rgba(78, 93, 108, 0.75);
+    background-color: rgb(78, 93, 108);
     box-shadow: 3px 0 3px rgba(0, 0, 0, 0.2);
     -webkit-transition: all 0.2s;
     -o-transition: all 0.2s;
@@ -504,4 +513,36 @@ html, body, #map, #app, .wrapper {
 
 #map_ad_vertical {
     right: 0;
+}
+
+
+
+
+#map.mode-create {
+    cursor: crosshair;
+}
+
+#map div.elbow {
+    transition: background-color .25s;
+    border: 2px solid white;
+    outline: none;
+    box-shadow: 0 0 3px rgba(0, 0, 0, .1);
+    border-radius: 50%;
+    pointer-events: none;
+    background-color: #555;
+}
+
+#map.mode-edit div.elbow {
+    cursor: move;
+    pointer-events: all;
+    background-color: orangered;
+}
+
+#map.mode-delete:not(.mode-append) path {
+    cursor: not-allowed;
+}
+
+#map svg {
+    position: absolute;
+    z-index: 1001;
 }
