#141 Added radial selection for raid markers on enemies. It's not working 100% yet, but in some shape of form it does work now.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -122,6 +122,10 @@
     z-index: 800 !important;
 }
 
+.alert_fixed_footer {
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
 /** GENERAL ICONS */
 .username_menu {
     width: 105px;
