--- a/resources/assets/js/handlebars/app_fixed_footer_small_template.handlebars
+++ b/resources/assets/js/handlebars/app_fixed_footer_small_template.handlebars
@@ -1,5 +1,5 @@
 <div class="text-center m-1">
-    <span class="alert alert-{{type}} border-secondary mb-0">
+    <span class="alert alert-{{type}} mb-0 alert_fixed_footer">
         {{{message}}}
     </span>
 </div>
