--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -8,7 +8,7 @@
     <div class="modifier modifier_2 {{modifier_2_classes}}" style="display: none;">
         {{{modifier_2_html}}}
     </div>
-    <div class="{{selection_classes_base}} {{selection_classes}}">
+    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}">
         <div class="{{main_visual_classes}}">
             {{{main_visual_html}}}
         </div>
