--- a/resources/assets/js/handlebars/map_enemy_raid_marker_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_raid_marker_template.handlebars
@@ -1,31 +1,33 @@
 <ul id="map_enemy_raid_marker_radial_{{id}}">
     <li>
         <a href="#">
-            +
         </a>
     </li>
-    <li><a href="#">
+    <li data-name=""><a href="#">
+        <i class="fas fa-ban"></i>
+    </a></li>
+    <li data-name="star"><a href="#">
         <div class="star_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="circle"><a href="#">
         <div class="circle_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="diamond"><a href="#">
         <div class="diamond_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="triangle"><a href="#">
         <div class="triangle_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="moon"><a href="#">
         <div class="moon_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="square"><a href="#">
         <div class="square_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="cross"><a href="#">
         <div class="cross_enemy_icon" style=""></div>
     </a></li>
-    <li><a href="#">
+    <li data-name="skull"><a href="#">
         <div class="skull_enemy_icon" style=""></div>
     </a></li>
 </ul>
