#149 MDT import warnings are now displayed in the user interface. Furthermore, I added a loading spinner to indicate to the user that something is in fact happening. Cleaned up the details area as well.

--- a/resources/assets/css/home.css
+++ b/resources/assets/css/home.css
@@ -292,3 +292,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+/** .rounded class doesn't work, unfortunately */
+#import_string_loader {
+    border-radius: .25rem !important
+}
