--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -1,6 +1,3 @@
-<div class="row text-center">
-    <div class="col"><i class="w-100 fas {{ fa_class }} "></i></div>
-</div>
-<div class="row text-center">
-    <div class="col"> {{ text }} </div>
+<div class="row no-gutters text-center">
+    <div class="col p-1"><i class="fas {{ fa_class }} "></i> {{ text }}</div>
 </div>
