#154 Converted two more inline handlebars to compiled handlebars.

--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -1,3 +1,7 @@
-<div class="row no-gutters text-center">
-    <div class="col p-1"><i class="fas {{ fa_class }} "></i> {{ text }}</div>
+<div class="row no-gutters text-center h-100">
+    <div class="col p-1 d-flex align-items-center">
+        <div class="text-center flex-grow-1">
+            <i class="fas {{ fa_class }} "></i> {{ text }}
+        </div>
+    </div>
 </div>
